@@ -1,5 +1,9 @@
 2008-12-26  Mirco Bauer <meebey@meebey.net> 
 
+	
+
+2008-12-26  Mirco Bauer <meebey@meebey.net> 
+
 	* Session.cs: Added GetUri() method.
 	
 	  Moved smuxi welcome message code to RegisterFrontendUI().
